--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -133,4 +133,17 @@ const jsonLd = {
         </a>
     </div>
 
-</MainGridLayout>
+<script src="https://giscus.app/client.js"
+        data-repo="SETIX-A/Fuwari"
+        data-repo-id="R_kgDOPROPxA"
+        data-category="General"
+        data-category-id="DIC_kwDOPROPxM4CtXTH"            data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="<%- url_for('/css/giscus.css') %>"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+    async>
+</script>
