--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -134,10 +134,12 @@ const jsonLd = {
     </div>
 
 <script src="https://giscus.app/client.js"
+        <script src="https://giscus.app/client.js"
         data-repo="SETIX-A/Fuwari"
-        data-repo-id="R_kgDOPROPxA"
+        data-repo-id="R_kgDOPhxhVA"
         data-category="General"
-        data-category-id="DIC_kwDOPROPxM4CtXTH"            data-mapping="pathname"
+        data-category-id="DIC_kwDOPhxhVM4CujcW"
+        data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
@@ -145,5 +147,5 @@ const jsonLd = {
         data-theme="preferred_color_scheme"
         data-lang="zh-CN"
         crossorigin="anonymous"
-    async>
+        async>
 </script>
